--- a/templates/mssqlserver/0/rancher-compose.yml
+++ b/templates/mssqlserver/0/rancher-compose.yml
@@ -1,13 +1,14 @@
 .catalog:
   name: MSSQLServer
-  version: 1.0
+  version: 2017-CU5-rancher1
   description: sqlserver
-  questions: #Used to request user input for configuration options
+  maintainer: "JJmomark <kyukou@gmail.com>"
+  questions: 
     - variable: "mssqlscale"
       type: "int"
       required: true
-      label: "mssqlscale"
-      description: "mssqlscale"
+      label: "# of mssql instance "
+      description: "# of mssql instance"
       default: 3
     - variable: "mssql_password"
       type: "string"
