--- a/templates/mssqlserver/0/rancher-compose.yml
+++ b/templates/mssqlserver/0/rancher-compose.yml
@@ -1,15 +1,23 @@
+version: '2'
 .catalog:
   name: MSSQLServer
   version: 2017-CU5-rancher1
   description: sqlserver
-  maintainer: "JJmomark <kyukou@gmail.com>"
+  maintainer: "JagJag <kyukou@gmail.com>"
   questions: 
-    - variable: "mssqlscale"
-      type: "int"
+    - variable: "mssql_pid"
+      label: "Mssql edition:"
+      description: |
+        Choose mssql edition to be run.
+      default: Developer
       required: true
-      label: "# of mssql instance "
-      description: "# of mssql instance"
-      default: 3
+      type: enum
+      options:
+        - Developer
+        - Express
+        - Standard
+        - Enterprise
+        - EnterpriseCore
     - variable: "mssql_password"
       type: "string"
       required: true
@@ -22,9 +30,18 @@
       label: "mssql_port"
       description: "connect port"
       default: 1433
+    - variable: "VOLUME_DRIVER"
+      description: "The VOLUME driver to associate with this server"
+      label: "VOLUME Driver"
+      required: true
+      default: "local"
+      type: enum
+      options:
+        - local
+        - rancher-nfs
+        - rancher-efs
+        - rancher-ebs
 
-version: '2'
 services:
   mssql-linux:
-    scale: ${mssqlscale}
     start_on_create: true
