--- a/templates/mssqlserver/config.yml
+++ b/templates/mssqlserver/config.yml
@@ -2,7 +2,5 @@ name: Microsoft SQLSERVER
 description: |
  Microsoft sqlserver 2017 docker edition
 version: 2017-CU5-rancher1
-maintainer: "JJmomark <kyukou@gmail.com>"
-category: Database
-maintainer: Jiang Jiang 
-projectURL: https://github.com/jagjag/rancher-catalog-jj/tree/master/templates/mssqlserver
+maintainer: "Jiang Jiang <kyukou@gmail.com>"
+category: Databases
