--- a/templates/mssqlserver/config.yml
+++ b/templates/mssqlserver/config.yml
@@ -1,4 +1,4 @@
-name: Microsoft SQLSERVER
+name: Microsoft Sqlserver
 description: |
  Microsoft sqlserver 2017 docker edition
 version: 2017-CU5-rancher1
