--- a/templates/atestapp/config.yml
+++ b/templates/atestapp/config.yml
@@ -1,6 +1,6 @@
-name: atestapp
+name: es623-xxx
 description: |
-    alpine based tomcat , application war file auto download and traefik proxy configuration
-version: 8.0-jre8-rancher1
+    es
+version: 6.2.3-xpack-rancher1
 category: java
 maintainer: Jiang Jiang <kyukou@gmail.com> 
