--- a/templates/tomcat-alpine/0/rancher-compose.yml
+++ b/templates/tomcat-alpine/0/rancher-compose.yml
@@ -1,129 +1,104 @@
 version: '2'
 catalog:
-    name: Elasticsearch Cluster
-    version: 6.2.3-xpack-rancher1
-    description: Scalable Elasticsearch Cluster
+  name: tomcat80jre8-1
+  version: 8.0-jre8-rancher1
+  description: tomcat alpine with treafik and app download
+  questions:
+    - variable: "tomcat_instance"
+      type: "int"
+      required: true
+      label: "# of tomcat instance"
+      description: "how many tomcat do you get"
+      default: 3
 
-    questions:
-        - variable: "cluster_name"
-          type: "string"
-          required: true
-          label: "Cluster name"
-          description: "Name of the Elasticsearch Cluster"
-          default: "es-cluster"
-        - variable: "elastic_password"
-          type: "string"
-          required: true
-          label: "Elastic user password"
-          description: "Password of the Elasticsearch Cluster"
-          default: "XXxxXX"
-        - variable: "UPDATE_SYSCTL"
-          label: "Update host sysctl:"
-          description: |
-            Set true to avoid vm.max_map_count errors.
-            WARN: If set true, host param vm.max_map_count will be update to 262144.
-          default: false
-          required: true
-          type: enum
-          options:
-            - false
-            - true
-        - variable: "master_heap_size"
-          type: "string"
-          required: true
-          label: "Heap size (master nodes)"
-          description: "Heap size to be allocated for Java (master nodes)"
-          default: "1024m"
+    - variable: "mem_limit"
+      type: "int"
+      required: true
+      label: "Memory limit"
+      description: "mem_limit = Xmx(JVM) + OtherMem(cache&buffer)"
+      default: 5368709120
 
-        - variable: "master_mem_limit"
-          type: "int"
-          required: true
-          label: "Memory limit in byte (master nodes)"
-          description: "Memory limit in Byte per elasticsearch container. AT LEAST double the heap size! (master nodes)"
-          default: 2147483648
+    - variable: "java_opts"
+      type: "string"
+      required: false
+      label: "JAVA_OPTS"
+      description: "jvm opts"
+      default: '-server -Xms4096m -Xmx4096m -XX:NewSize=2048m -XX:MaxNewSize=2048m -XX:+UseParallelOldGC -XX:ParallelGCThreads=4' 
 
-        - variable: "data_heap_size"
-          type: "string"
-          required: true
-          label: "Heap size (data nodes)"
-          description: "Heap size to be allocated for Java (data nodes)"
-          default: "1024m"
+    - variable: "war_file_url"
+      type: "string"
+      required: true
+      label: "your warball URL"
+      description: "You Warball URL to be download"
+      default: "http://getsome.com/ROOT.war" 
 
-        - variable: "data_mem_limit"
-          type: "int"
-          required: true
-          label: "Memory limit in byte (data nodes)"
-          description: "Memory limit in Byte per elasticsearch container. AT LEAST double the heap size! (data nodes)"
-          default: 2147483648
+    - variable: "lb_port"
+      type: "int"
+      required: true
+      label: "rancher lb port"
+      description: "rancher lb port expose to host"
+      default: 8084 
 
-        - variable: "client_heap_size"
-          type: "string"
-          required: true
-          label: "Heap size (client nodes)"
-          description: "Heap size to be allocated for Java (client nodes)"
-          default: "1024m"
+    - variable: "traefik_enable"
+      label: "Traefik proxy enabled or not"
+      description: "Traefik proxy enabled or not"
+      default: false
+      required: true
+      type: enum
+      options:
+        - false
+        - true
 
-        - variable: "client_mem_limit"
-          type: "int"
-          required: true
-          label: "Memory limit in byte (client nodes)"
-          description: "Memory limit in Byte per elasticsearch container. AT LEAST double the heap size! (client nodes)"
-          default: 2147483648
+    - variable: "treafik_frontend_rule"
+      type: "string"
+      required: true
+      label: "treafik_frontend_rule"
+      description: "traefik frontend rule,please refer to traefik doc"
+      default: "Host:mydockerapp.xxx.com" 
 
-        - variable: "kibana_mem_limit"
-          type: "int"
-          required: true
-          label: "Memory limit in byte (kibana nodes)"
-          description: "Memory limit in Byte per elasticsearch container. AT LEAST double the heap size! (kibana nodes)"
-          default: 2147483648
-
-        - variable: "minimum_master_nodes"
-          type: "int"
-          required: true
-          label: "# of minimum Master Nodes"
-          description: "Set the number of required master nodes to reach quorum. Sets initial scale to this value as well"
-          default: 3
-
-        - variable: "initial_data_nodes"
-          type: "int"
-          required: true
-          label: "# of initial data nodes"
-          description: "Set the initial number of data nodes"
-          default: 3
-
-        - variable: "initial_client_nodes"
-          type: "int"
-          required: true
-          label: "# of initial client nodes"
-          description: "Set the initial number of client nodes"
-          default: 1
-
-        - variable: "es_port"
-          type: "int"
-          required: true
-          label: "es port"
-          description: "es port"
-          default: 1
-
-        - variable: "VOLUME_DRIVER"
-          description: "The VOLUME driver to associate with this server"
-          label: "VOLUME Driver"
-          required: true
-          default: "local"
-          type: enum
-          options:
-            - local
-            - rancher-nfs
-            - rancher-efs
-            - rancher-ebs
+    - variable: "treafik_default_protocal"
+      label: "Traefik http/https"
+      description: "http or https"
+      default: http
+      required: true
+      type: enum
+      options:
+        - http
+        - https
 
 services:
+    tc80jre8app:
+      scale: ${tomcat_instance}
+      start_on_create: true 
 
-  es-master:
-    scale: ${minimum_master_nodes}
+    tc80jre8volume:
+      scale: ${tomcat_instance}
+      start_on_create: true
 
-  es-data:
-    scale: ${initial_data_nodes}
-
-  es-client:
-    scale: ${initial_client_nodes}
+    tc80jre8:
+      scale: ${tomcat_instance}
+      start_on_create: true
+      
+    tc80jr8lb:
+      scale: 2
+      start_on_create: true
+      lb_config:
+        certs: []
+        port_rules:
+        - backend_name: ''
+          hostname: ''
+          path: ''
+          priority: 1
+          protocol: http
+          service: tc80jre8
+          source_port: ${lb_port} #18080
+          target_port: 8080
+          weight: 0
+      health_check:
+        healthy_threshold: 1
+        response_timeout: 2000
+        port: 42
+        unhealthy_threshold: 2
+        initializing_timeout: 60000
+        interval: 2000
+        reinitializing_timeout: 60000
